dialog, more prefs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.example.obsidiancompanion">
 
     <uses-permission android:name="android.permission.ACTION_OPEN_DOCUMENT" />
+    <uses-permission android:name="android.permission.BROADCAST_CLOSE_SYSTEM_DIALOGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
-
 
     <application
         android:allowBackup="true"
@@ -14,6 +14,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ObsidianCompanion">
+        <activity
+            android:theme="@style/Theme.AppCompat.Dialog"
+            android:name=".ui.InputDialogActivity"
+            android:exported="false"
+            android:excludeFromRecents="true"
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -29,16 +35,13 @@
             android:name=".SendTileService"
             android:enabled="true"
             android:exported="true"
-            android:label="Send to Obsidian"
             android:icon="@drawable/ic_home_black_24dp"
-            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
-            >
+            android:label="Send to Obsidian"
+            android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
-                <action
-                    android:name="android.service.quicksettings.action.QS_TILE"/>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
