--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.BROADCAST_CLOSE_SYSTEM_DIALOGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_MEDIA" />
+
 
     <application
         android:allowBackup="true"
@@ -13,10 +15,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ObsidianCompanion">
+        android:theme="@style/Theme.ObsidianCompanion"
+        android:requestLegacyExternalStorage="true"
+        >
+
+
         <activity
             android:theme="@style/Theme.AppCompat.Dialog"
-            android:name=".ui.InputDialogActivity"
+            android:name=".ui.inputDialog.InputDialogActivity"
             android:exported="false"
             android:excludeFromRecents="true"
             />
